--- a/.github/workflows/import-html.yml
+++ b/.github/workflows/import-html.yml
@@ -17,10 +17,26 @@ jobs:
           mkdir -p dist
           cp subrepo/*.html dist/
 
-      - name: Trigger build-and-deploy
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: zacksleo/tcb-htmls
-          workflow: deploy.yml
-          ref: main
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18' # 根据您的项目需求选择Node.js版本
+
+    - name: Install CloudBase CLI
+      run: npm install -g @cloudbase/cli
+
+    - name: Deploy to CloudBase Static Hosting
+      env:
+        # TCB_SECRET_ID和TCB_SECRET_KEY会自动被CLI识别
+        TCB_SECRET_ID: ${{ secrets.TCB_SECRET_ID }}
+        TCB_SECRET_KEY: ${{ secrets.TCB_SECRET_KEY }}
+      run: |
+        tcb login --apiKeyId ${{ secrets.TCB_SECRET_ID }} --apiKey ${{ secrets.TCB_SECRET_KEY }}
+        tcb hosting deploy ./dist --envId ${{ secrets.TCB_ENV_ID }}
